Do not use the default proxy.

Qt uses the system proxy if set up, explicitly disable it.

BUG: 376187